hw1/deployment-first.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: first-service
  template:
    metadata:
      labels:
        app: first-service
    spec:
      containers:
      - name: first-container
        image: playsocool/first-service:latest
        ports:
        - containerPort: 8000
