hw1/deployment-second.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: second-service
  template:
    metadata:
      labels:
        app: second-service
    spec:
      containers:
      - name: second-container
        image: playsocool/second-service:latest
        ports:
        - containerPort: 9000
