hw1/service-first.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    app: first-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
