hw1/service-second.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-service
spec:
  selector:
    app: second-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
