hw1/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /first
    route:
    - destination:
        host: first-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /second
    route:
    - destination:
        host: second-service
        port:
          number: 80
